--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "categories": [
         "Programming Languages"
     ],
+    "activationEvents": [
+        "onLanguage:l"
+    ],
+    "main": "./out/extension.js",
     "contributes": {
         "languages": [{
             "id": "l",
@@ -23,5 +27,17 @@
             "scopeName": "source.l",
             "path": "./syntaxes/l.tmLanguage.json"
         }]
+    },
+    "scripts": {
+        "vscode:prepublish": "npm run compile",
+        "compile": "tsc -p ./",
+        "watch": "tsc -watch -p ./"
+    },
+    "devDependencies": {
+        "@types/vscode": "^1.61.0",
+        "typescript": "^4.7.4"
+    },
+    "dependencies": {
+        "l": "github:panlina/l"
     }
 }
