--- a/package.json
+++ b/package.json
@@ -26,7 +26,172 @@
             "language": "l",
             "scopeName": "source.l",
             "path": "./syntaxes/l.tmLanguage.json"
-        }]
+        }],
+        "menus": {
+            "editor/title/run": [
+                {
+                    "command": "extension.mock-debug.runEditorContents",
+                    "when": "resourceLangId == markdown",
+                    "group": "navigation@1"
+                },
+                {
+                    "command": "extension.mock-debug.debugEditorContents",
+                    "when": "resourceLangId == markdown",
+                    "group": "navigation@2"
+                }
+            ],
+            "commandPalette": [
+                {
+                    "command": "extension.mock-debug.debugEditorContents",
+                    "when": "resourceLangId == markdown"
+                },
+                {
+                    "command": "extension.mock-debug.runEditorContents",
+                    "when": "resourceLangId == markdown"
+                }
+            ],
+            "debug/variables/context": [
+                {
+                    "command": "extension.mock-debug.toggleFormatting",
+                    "when": "debugType == 'mock' && debugProtocolVariableMenuContext == 'simple'"
+                }
+            ]
+        },
+        "commands": [
+            {
+                "command": "extension.mock-debug.debugEditorContents",
+                "title": "Debug File",
+                "category": "Mock Debug",
+                "enablement": "!inDebugMode",
+                "icon": "$(debug-alt)"
+            },
+            {
+                "command": "extension.mock-debug.runEditorContents",
+                "title": "Run File",
+                "category": "Mock Debug",
+                "enablement": "!inDebugMode",
+                "icon": "$(play)"
+            },
+            {
+                "command": "extension.mock-debug.toggleFormatting",
+                "title": "Toggle between decimal and hex formatting"
+            }
+        ],
+        "breakpoints": [
+            {
+                "language": "markdown"
+            }
+        ],
+        "debuggers": [
+            {
+                "type": "mock",
+                "languages": [
+                    "markdown"
+                ],
+                "label": "Mock Debug",
+                "program": "./out/debugAdapter.js",
+                "runtime": "node",
+                "configurationAttributes": {
+                    "launch": {
+                        "required": [
+                            "program"
+                        ],
+                        "properties": {
+                            "program": {
+                                "type": "string",
+                                "description": "Absolute path to a text file.",
+                                "default": "${workspaceFolder}/${command:AskForProgramName}"
+                            },
+                            "stopOnEntry": {
+                                "type": "boolean",
+                                "description": "Automatically stop after launch.",
+                                "default": true
+                            },
+                            "trace": {
+                                "type": "boolean",
+                                "description": "Enable logging of the Debug Adapter Protocol.",
+                                "default": true
+                            },
+                            "compileError": {
+                                "type": "string",
+                                "description": "Simulates a compile error in 'launch' request.",
+                                "enum": [
+                                    "default",
+                                    "show",
+                                    "hide"
+                                ],
+                                "enumDescriptions": [
+                                    "default: show fake compile error to user",
+                                    "show fake compile error to user",
+                                    "do not show fake compile error to user"
+                                ]
+                            }
+                        }
+                    },
+                    "attach": {
+                        "required": [
+                            "program"
+                        ],
+                        "properties": {
+                            "program": {
+                                "type": "string",
+                                "description": "Absolute path to a text file.",
+                                "default": "${workspaceFolder}/${command:AskForProgramName}"
+                            },
+                            "stopOnEntry": {
+                                "type": "boolean",
+                                "description": "Automatically stop after attach.",
+                                "default": true
+                            },
+                            "trace": {
+                                "type": "boolean",
+                                "description": "Enable logging of the Debug Adapter Protocol.",
+                                "default": true
+                            },
+                            "compileError": {
+                                "type": "string",
+                                "description": "Simulates a compile error in 'attach' request.",
+                                "enum": [
+                                    "default",
+                                    "show",
+                                    "hide"
+                                ],
+                                "enumDescriptions": [
+                                    "default: show fake compile error to user",
+                                    "show fake compile error to user",
+                                    "do not show fake compile error to user"
+                                ]
+                            }
+                        }
+                    }
+                },
+                "initialConfigurations": [
+                    {
+                        "type": "mock",
+                        "request": "launch",
+                        "name": "Ask for file name",
+                        "program": "${workspaceFolder}/${command:AskForProgramName}",
+                        "stopOnEntry": true
+                    }
+                ],
+                "configurationSnippets": [
+                    {
+                        "label": "Mock Debug: Launch",
+                        "description": "A new configuration for 'debugging' a user selected markdown file.",
+                        "body": {
+                            "type": "mock",
+                            "request": "launch",
+                            "name": "Ask for file name",
+                            "program": "^\"\\${workspaceFolder}/\\${command:AskForProgramName}\"",
+                            "stopOnEntry": true
+                        }
+                    }
+                ],
+                "variables": {
+                    "AskForProgramName": "extension.mock-debug.getProgramName"
+                }
+            }
+        ]
     },
     "scripts": {
         "vscode:prepublish": "npm run compile",
@@ -34,10 +199,15 @@
         "watch": "tsc -watch -p ./"
     },
     "devDependencies": {
+        "@types/node": "^18.11.12",
         "@types/vscode": "^1.61.0",
         "typescript": "^4.7.4"
     },
     "dependencies": {
-        "l": "github:panlina/l"
+        "@vscode/debugadapter": "^1.58.0",
+        "await-notify": "^1.0.1",
+        "base64-js": "^1.5.1",
+        "l": "github:panlina/l",
+        "path-browserify": "^1.0.1"
     }
 }
